@@ -17,11 +17,14 @@ import static comasky.shared.Tools.formatUptime;
 @ApplicationScoped
 public class RpcServices {
 
-    @Inject
-    ObjectMapper objectMapper;
+    private final ObjectMapper objectMapper;
+    private final RpcClient rpcClient;
 
     @Inject
-    private RpcClient rpcClient;
+    public RpcServices(ObjectMapper objectMapper, RpcClient rpcClient) {
+        this.objectMapper = objectMapper;
+        this.rpcClient = rpcClient;
+    }
 
     public NodeInfo getNodeInfo() {
         return this.executeRpcCall("getnetworkinfo", Collections.emptyList(), NodeInfo.class);
@@ -32,32 +35,32 @@ public class RpcServices {
     }
 
     /**
-     * Récupère les informations détaillées d'un bloc par son hash.
-     * La verbosité 1 est utilisée pour obtenir l'objet JSON du bloc.
-     * C'est suffisant pour le timestamp (time) et réduit la taille de la réponse
-     * par rapport à la verbosité 2 (qui inclut les détails de toutes les transactions).
-     * @param blockHash Le hash du bloc.
-     * @return Les informations du bloc.
+     * Retrieves detailed information about a block by its hash.
+     * Verbosity 1 is used to get the JSON object of the block.
+     * This is sufficient for the timestamp (time) and reduces the response size
+     * compared to verbosity 2 (which includes details of all transactions).
+     * @param blockHash The hash of the block.
+     * @return The block information.
      */
     public BlockInfo getBlockInfo(String blockHash) {
-        // Changement de la verbosité de 2 à 1 pour réduire la taille de la réponse RPC.
+        // Changed verbosity from 2 to 1 to reduce RPC response size.
         List<Object> params = List.of(blockHash, 1);
         return this.executeRpcCall("getblock", params, BlockInfo.class);
     }
 
     /**
-     * Récupère uniquement le timestamp Unix du dernier bloc validé.
-     * Ceci combine getbestblockhash et getblock.
-     * @return Le timestamp Unix (en secondes) du dernier bloc.
+     * Retrieves only the Unix timestamp of the last validated block.
+     * This combines getbestblockhash and getblock.
+     * @return The Unix timestamp (in seconds) of the last block.
      */
     public long getLastBlockTimestamp() {
-        // 1. Obtenir le hash du meilleur bloc
+        // 1. Get the hash of the best block
         String bestHash = this.getBestBlockHash();
 
-        // 2. Obtenir toutes les informations du bloc, y compris le timestamp
+        // 2. Get all block information, including the timestamp
         BlockInfo blockInfo = this.getBlockInfo(bestHash);
 
-        // 3. Retourner uniquement le timestamp
+        // 3. Return only the timestamp
         return blockInfo.getTime();
     }
 
@@ -79,23 +82,21 @@ public class RpcServices {
                 throw new RpcException("RPC Error: " + response.getError());
             }
             allPeers = response.getResult();
-
+        } catch (RpcException e) {
+            throw e;
         } catch (Exception e) {
             throw new RpcException("Parsing error for peer info: " + e.getMessage());
         }
 
-        // 2. Séparation des pairs en Inbound et Outbound
-        List<PeerInfo> inboundPeers = allPeers.stream()
-                .filter(PeerInfo::isInbound)
-                .toList();
+        // Separation of peers into Inbound and Outbound with a single pass
+        var peersByType = allPeers.stream()
+                .collect(Collectors.partitioningBy(PeerInfo::isInbound));
+        List<PeerInfo> inboundPeers = peersByType.get(true);
+        List<PeerInfo> outboundPeers = peersByType.get(false);
 
-        List<PeerInfo> outboundPeers = allPeers.stream()
-                .filter(p -> !p.isInbound())
-                .toList();
-
-        // 3. Calcul des statistiques pour chaque groupe
-        final var stats = new SubverDistribution(this.calculateSubverStats(inboundPeers), this.calculateSubverStats(outboundPeers));
-        final var generalStat = new GeneralStats(inboundPeers.size(),outboundPeers.size(), inboundPeers.size()+ outboundPeers.size());
+        // 3. Calculate statistics for each group
+        var stats = new SubverDistribution(calculateSubverStats(inboundPeers), calculateSubverStats(outboundPeers));
+        var generalStat = new GeneralStats(inboundPeers.size(), outboundPeers.size(), inboundPeers.size() + outboundPeers.size());
         return GlobalResponse.builder()
                 .generalStats(generalStat)
                 .inboundPeer(inboundPeers)
@@ -104,52 +105,52 @@ public class RpcServices {
                 .blockchainInfo(this.getBlockchainInfo())
                 .nodeInfo(this.getNodeInfo())
                 .upTime(formatUptime(this.getUptimeSeconds()))
-                // Cette ligne utilise la méthode getBlockInfo corrigée
-                .blockInfo(this.getBlockInfo(this.getBestBlockHash()))
+                .block(this.getBlockInfo(this.getBestBlockHash()))
                 .build();
     }
 
 
     /**
-     * Méthode utilitaire pour calculer la distribution des sous-versions (subver) en pourcentages.
-     * @param peers La liste de pairs (inbound ou outbound).
-     * @return ObjectNode avec les pourcentages par subver et le total_peers_count.
+     * Calculates the distribution of subversions (subver) as percentages.
+     * @param peers The list of peers (inbound or outbound).
+     * @return List of statistics by subver with percentages.
      */
     private List<SubverStats> calculateSubverStats(List<PeerInfo> peers) {
         if (peers.isEmpty()) {
             return Collections.emptyList();
         }
-        final double totalPeers = peers.size();
+        double totalPeers = peers.size();
         return peers.stream()
                 .filter(p -> p.getSubver() != null)
                 .collect(Collectors.groupingBy(PeerInfo::getSubver, Collectors.counting()))
                 .entrySet().stream()
-                .map(e -> SubverStats.builder()
-                        .server(e.getKey())
-                        .percentage(Math.round(e.getValue() * 10000.0 / totalPeers) / 100.0)
+                .map(entry -> SubverStats.builder()
+                        .server(entry.getKey())
+                        .percentage(Math.round(entry.getValue() * 10000.0 / totalPeers) / 100.0)
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
-     * NOUVELLE VERSION : Appelle le client RPC avec une méthode et une liste de paramètres.
+     * Calls the RPC client with a method and a list of parameters.
      */
     private String callRpc(String method, List<Object> params) {
-        java.util.Map<String, Object> rpcRequest = new java.util.HashMap<>();
-        rpcRequest.put("jsonrpc", "1.0");
-        rpcRequest.put("id", "quarkus-" + method);
-        rpcRequest.put("method", method);
-        rpcRequest.put("params", params); // Utilise la liste des paramètres
+        var rpcRequest = java.util.Map.of(
+            "jsonrpc", "1.0",
+            "id", "quarkus-" + method,
+            "method", method,
+            "params", params
+        );
 
         try {
-            return this.rpcClient.executeRpcCall(rpcRequest);
+            return rpcClient.executeRpcCall(rpcRequest);
         } catch (Exception e) {
             throw new RpcException("Connection failed for method " + method + ": " + e.getMessage());
         }
     }
 
     /**
-     * NOUVELLE VERSION : Exécute l'appel RPC et désérialise la réponse.
+     * Executes the RPC call and deserializes the response.
      */
     private <T> T executeRpcCall(String rpcMethod, List<Object> params, Class<T> resultClass) {
         String jsonResponse = callRpc(rpcMethod, params);
